--- a/usb/gadget/android.hardware.usb.gadget-service.rc
+++ b/usb/gadget/android.hardware.usb.gadget-service.rc
@@ -20,3 +20,13 @@ on post-fs
     chmod 664 /sys/devices/platform/11110000.usb/dwc3_exynos_otg_b_sess
     chmod 664 /sys/devices/platform/11110000.usb/dwc3_exynos_otg_id
     chmod 664 /sys/devices/platform/11110000.usb/usb_data_enabled
+
+service disable_usb_data /system/bin/bootstrap/linkerconfig --help
+    # This service runs a command that does effectively nothing. The real action happens in
+    # onrestart. init.rc starts, restarts, and stops this service. This way we don't need a
+    # separate script/binary and sepolicy to perform this very simple action.
+    onrestart write /sys/devices/platform/11110000.usb/usb_data_enabled 0
+    # User and group below are for the service command itself, not the line above.
+    user nobody
+    group nobody
+    oneshot
