Add enable_usb_data service
Add service for enabling USB data and activating any already-connected
USB devices.

Issue: calyxos#1414
Requires: I305efc1b597c15b1fb44202f9ab602dee5f4d606
Change-Id: I11d4fa85c1bf0c9e9705b2c3071b3561cc291ecc

--- a/usb/gadget/android.hardware.usb.gadget-service.rc
+++ b/usb/gadget/android.hardware.usb.gadget-service.rc
@@ -30,3 +30,12 @@ service disable_usb_data /system/bin/bootstrap/linkerconfig --help
     user nobody
     group nobody
     oneshot
+
+service enable_usb_data /system/bin/bootstrap/linkerconfig --help
+    # This could be a normal service, but for flexibility, as above, it is structured to run
+    # on restart, in the event that a script is not needed in the future or for certain devices.
+    onrestart exec_background - nobody system -- /vendor/bin/init.enable_usb_data.sh /sys/devices/platform/11110000.usb/usb_data_enabled 1 /sys/class/typec/port0-partner /sys/class/typec/port0/data_role [host] /sys/devices/platform/11110000.usb/dwc3_exynos_otg_id 0 1 /sys/devices/platform/11110000.usb/dwc3_exynos_otg_b_sess 0 1
+    # User and group below are for the service command itself, not the line above.
+    user nobody
+    group nobody
+    oneshot
